@@ -1,7 +1,6 @@
-{% extends "wagtailadmin/base.html" %}
+{% extends "wagtailadmin/generic/base.html" %}
 {% load wagtailimages_tags %}
 {% load i18n %}
-{% block titletag %}{% trans "Add user" %}{% endblock %}
 {% block content %}
 
     {% trans "Add user" as add_user_str %}
